--- a/setup.conf
+++ b/setup.conf
@@ -1,2 +1,2 @@
-JLINKPATH	=	<full path to JLink binary>
-ARMGCC_DIR	= 	/usr/
+JLINKPATH	=	/Applications/SEGGER/JLink_V794i/JLinkExe
+ARMGCC_DIR	= 	/Users/davidgerard/Desktop/MRes/4B25-EmbeddedSystems/cw2/bare-metal-arm/gcc-arm-none-eabi-4_8-2014q1
